# pixelscale

./: .env.aws.example  .gitignore  Makefile  README.md  deploy-aws.sh  dev.sh  docker-compose.aws.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  main.py  pixelscale.db  pyproject.toml
backend/src/app/: config.py  crud.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/src/app/middleware/: caching_static.py  logging_middleware.py
backend/src/app/routers/: auth.py  health.py  images.py  share.py  stress.py
backend/src/app/services/: auth.py  image_processor.py  s3.py
backend/tests/: README.md  conftest.py  test_auth.py  test_images.py
frontend/: .gitignore  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DeleteConfirmModal.tsx  ImageEditor.tsx  Layout.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  RevokeConfirmModal.tsx  ShareModal.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: useFavorites.ts  useImages.ts
frontend/src/lib/: api.ts  auth.tsx  queryClient.ts  utils.ts
frontend/src/pages/: Favorites.tsx  Gallery.tsx  Login.test.tsx  Login.tsx  Register.test.tsx  Register.tsx  Shared.tsx  SharedImage.tsx  Upload.tsx
frontend/src/test/: setup.ts  utils.tsx
